[gd_scene load_steps=3 format=3 uid="uid://dmtt80qswd4lq"]

[ext_resource type="Script" path="res://ui/signup_ui/signup-ui.gd" id="1_3lwks"]
[ext_resource type="Script" path="res://ui/error-label.gd" id="2_3e0c0"]

[node name="SignUpUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3lwks")

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -62.0
offset_bottom = 25.0
grow_horizontal = 0
text = "Назад"

[node name="SignUpVContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -159.0
offset_right = 159.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SignUpFieldsHContainer" type="HBoxContainer" parent="SignUpVContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="EmailAndUsernameVContainer" type="VBoxContainer" parent="SignUpVContainer/SignUpFieldsHContainer"]
layout_mode = 2
alignment = 1

[node name="EmailVContainer" type="VBoxContainer" parent="SignUpVContainer/SignUpFieldsHContainer/EmailAndUsernameVContainer"]
layout_mode = 2

[node name="EmailLabel" type="Label" parent="SignUpVContainer/SignUpFieldsHContainer/EmailAndUsernameVContainer/EmailVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Почта:"

[node name="EmailField" type="LineEdit" parent="SignUpVContainer/SignUpFieldsHContainer/EmailAndUsernameVContainer/EmailVContainer"]
layout_mode = 2
caret_blink = true

[node name="EmailErrors" type="Label" parent="SignUpVContainer/SignUpFieldsHContainer/EmailAndUsernameVContainer/EmailVContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 10
autowrap_mode = 1
script = ExtResource("2_3e0c0")

[node name="UsernameVContainer" type="VBoxContainer" parent="SignUpVContainer/SignUpFieldsHContainer/EmailAndUsernameVContainer"]
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="SignUpVContainer/SignUpFieldsHContainer/EmailAndUsernameVContainer/UsernameVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Имя пользователя:"

[node name="UsernameField" type="LineEdit" parent="SignUpVContainer/SignUpFieldsHContainer/EmailAndUsernameVContainer/UsernameVContainer"]
layout_mode = 2
caret_blink = true

[node name="UsernameErrors" type="Label" parent="SignUpVContainer/SignUpFieldsHContainer/EmailAndUsernameVContainer/UsernameVContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 10
autowrap_mode = 1
script = ExtResource("2_3e0c0")

[node name="SpaceLabel" type="Label" parent="SignUpVContainer/SignUpFieldsHContainer"]
layout_mode = 2

[node name="SpaceLabel-2" type="Label" parent="SignUpVContainer/SignUpFieldsHContainer"]
layout_mode = 2

[node name="SpaceLabel-3" type="Label" parent="SignUpVContainer/SignUpFieldsHContainer"]
layout_mode = 2

[node name="PasswordsVContainer" type="VBoxContainer" parent="SignUpVContainer/SignUpFieldsHContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PasswordVContainer" type="VBoxContainer" parent="SignUpVContainer/SignUpFieldsHContainer/PasswordsVContainer"]
layout_mode = 2

[node name="PasswordLabel" type="Label" parent="SignUpVContainer/SignUpFieldsHContainer/PasswordsVContainer/PasswordVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Пароль:"

[node name="PasswordField" type="LineEdit" parent="SignUpVContainer/SignUpFieldsHContainer/PasswordsVContainer/PasswordVContainer"]
layout_mode = 2
caret_blink = true
secret = true
secret_character = "*"

[node name="PasswordErrors" type="Label" parent="SignUpVContainer/SignUpFieldsHContainer/PasswordsVContainer/PasswordVContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 10
autowrap_mode = 1
script = ExtResource("2_3e0c0")

[node name="PasswordRepeatVContainer" type="VBoxContainer" parent="SignUpVContainer/SignUpFieldsHContainer/PasswordsVContainer"]
layout_mode = 2

[node name="PasswordRepeatLabel" type="Label" parent="SignUpVContainer/SignUpFieldsHContainer/PasswordsVContainer/PasswordRepeatVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Ещё раз пароль:"

[node name="PasswordRepeatField" type="LineEdit" parent="SignUpVContainer/SignUpFieldsHContainer/PasswordsVContainer/PasswordRepeatVContainer"]
layout_mode = 2
caret_blink = true
secret = true
secret_character = "*"

[node name="PasswordRepeatErrors" type="Label" parent="SignUpVContainer/SignUpFieldsHContainer/PasswordsVContainer/PasswordRepeatVContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 10
autowrap_mode = 1
script = ExtResource("2_3e0c0")

[node name="SignUpButton" type="Button" parent="SignUpVContainer"]
layout_mode = 2
text = "Регистрация"

[node name="SignUpErrors" type="Label" parent="SignUpVContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
script = ExtResource("2_3e0c0")

[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="text_changed" from="SignUpVContainer/SignUpFieldsHContainer/EmailAndUsernameVContainer/EmailVContainer/EmailField" to="." method="_on_email_field_text_changed"]
[connection signal="text_changed" from="SignUpVContainer/SignUpFieldsHContainer/EmailAndUsernameVContainer/UsernameVContainer/UsernameField" to="." method="_on_username_field_text_changed"]
[connection signal="text_changed" from="SignUpVContainer/SignUpFieldsHContainer/PasswordsVContainer/PasswordVContainer/PasswordField" to="." method="_on_password_field_text_changed"]
[connection signal="text_changed" from="SignUpVContainer/SignUpFieldsHContainer/PasswordsVContainer/PasswordRepeatVContainer/PasswordRepeatField" to="." method="_on_password_repeat_field_text_changed"]
[connection signal="pressed" from="SignUpVContainer/SignUpButton" to="." method="_on_sign_up_button_pressed"]
